--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,14 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+    input{
+      outline: none;
+      padding:0;
+      margin:0;
+      background-color: transparent;
+    }
+  </style>
 </head>
 <body>
   <app-root></app-root>
